force-app/main/default/objects/SansanNameCard__c/SansanNameCard__c.object-meta.xml
<CustomObject>
    <label>Sansan名刺</label>
    <nameField>
        <label>Sansan名刺名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>