force-app/main/default/objects/SansanNameCard__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>ビル名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>