force-app/main/default/objects/SansanNameCard__c/fields/CompanyId__c.field-meta.xml
<CustomField>
    <fullName>CompanyId__c</fullName>
    <label>会社ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>