force-app/main/default/objects/SansanNameCard__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <label>会社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>