force-app/main/default/objects/SansanNameCard__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>メールアドレス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>