force-app/main/default/objects/SansanNameCard__c/fields/ErrorMessageOfAccount__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessageOfAccount__c</fullName>
    <label>取引先連携エラーメッセージ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>