force-app/main/default/objects/SansanNameCard__c/fields/ErrorMessageOfContact__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessageOfContact__c</fullName>
    <label>取引先責任者連携エラーメッセージ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>