force-app/main/default/objects/SansanNameCard__c/fields/ExchangeDate__c.field-meta.xml
<CustomField>
    <fullName>ExchangeDate__c</fullName>
    <label>名刺交換日</label>
    <type>Date</type>
</CustomField>