force-app/main/default/objects/SansanNameCard__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <label>FAX番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>