force-app/main/default/objects/SansanNameCard__c/fields/FirstNameReading__c.field-meta.xml
<CustomField>
    <fullName>FirstNameReading__c</fullName>
    <label>名カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>