force-app/main/default/objects/SansanNameCard__c/fields/LastNameReading__c.field-meta.xml
<CustomField>
    <fullName>LastNameReading__c</fullName>
    <label>姓カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>