force-app/main/default/objects/SansanNameCard__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>携帯番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>