force-app/main/default/objects/SansanNameCard__c/fields/NameCardId__c.field-meta.xml
<CustomField>
    <fullName>NameCardId__c</fullName>
    <label>名刺ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>