force-app/main/default/objects/SansanNameCard__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <label>所有者ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>