force-app/main/default/objects/SansanNameCard__c/fields/PersonId__c.field-meta.xml
<CustomField>
    <fullName>PersonId__c</fullName>
    <label>人物ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>