force-app/main/default/objects/SansanNameCard__c/fields/RegisteredTime__c.field-meta.xml
<CustomField>
    <fullName>RegisteredTime__c</fullName>
    <label>名刺登録日時</label>
    <type>DateTime</type>
</CustomField>