force-app/main/default/objects/SansanNameCard__c/fields/SecondTel__c.field-meta.xml
<CustomField>
    <fullName>SecondTel__c</fullName>
    <label>電話番号2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>