force-app/main/default/objects/SansanNameCard__c/fields/TagNames__c.field-meta.xml
<CustomField>
    <fullName>TagNames__c</fullName>
    <label>Sansanタグ</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>未設定</fullName>
            </value>
            <value>
                <fullName>広告営業</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>