force-app/main/default/objects/SansanNameCard__c/fields/UpdatedTime__c.field-meta.xml
<CustomField>
    <fullName>UpdatedTime__c</fullName>
    <label>名刺更新日時</label>
    <type>DateTime</type>
</CustomField>