force-app/main/default/objects/SansanNameCard__c/listViews/AllData.listView-meta.xml
<ListView>
    <fullName>AllData</fullName>
    <columns>NAME</columns>
    <columns>CompanyName__c</columns>
    <columns>ExchangeDate__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>全てのデータ</label>
</ListView>