force-app/main/default/objects/SansanNameCard__c/listViews/first_data.listView-meta.xml
<ListView>
    <fullName>first_data</fullName>
    <columns>NAME</columns>
    <columns>CompanyName__c</columns>
    <columns>ExchangeDate__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>3/5/2019 12:00 AM</value>
    </filters>
    <label>初回取り込みデータ(5日分)</label>
</ListView>