force-app/main/default/objects/SansanNameCard__c/listViews/TodaysData.listView-meta.xml
<ListView>
    <fullName>TodaysData</fullName>
    <columns>NAME</columns>
    <columns>CompanyName__c</columns>
    <columns>ExchangeDate__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>今日のデータ</label>
</ListView>